# Licence-Manager

./: .env.example  .env.prod.example  .gitignore  .sec-ana  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_employee_avatar.py  003_add_payment_methods_and_files.py  004_rbac_system.py  005_add_cascade_delete_to_licenses.py  006_add_performance_indexes.py  007_increase_license_type_column_size.py  008_add_provider_logos_and_packages.py  009_add_user_notification_preferences.py  010_add_cost_snapshots.py  011_add_employee_aliases_and_match_fields.py  012_add_additional_performance_indices.py  013_add_cancellation_expiration_tracking.py  014_add_global_service_accounts.py  015_add_admin_accounts.py  016_add_additional_query_indexes.py  017_add_employee_manager_fields.py  018_add_service_account_license_types.py  019_add_employee_source_field.py  020_add_manual_employee_permissions.py  021_add_locale_preferences.py  022_add_settings_delete_permission.py  023_add_totp_two_factor_auth.py  024_add_employee_external_accounts.py  025_add_account_owner_indexes.py  026_add_optimization_indexes.py  027_add_composite_indexes.py  028_add_backup_permissions.py  028_add_user_language_preference.py  029_add_backup_permissions.py  029_add_import_jobs_table.py  030_add_external_user_indexes.py  031_add_backup_permissions.py  032_add_google_oauth_fields.py  033_remove_password_auth.py
backend/scripts/: create_superadmin.py
backend/src/licence_api/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/src/licence_api/constants/: __init__.py  paths.py  provider_logos.py  validation.py
backend/src/licence_api/middleware/: __init__.py  audit_middleware.py  auth_middleware.py  cors_logging_middleware.py  csrf_middleware.py  (+1 more)
backend/tests/: __init__.py  test_security_sql_injection.py
(+358 files in other folders)
